--- a/src/styles/components/ChallengeBox.module.css
+++ b/src/styles/components/ChallengeBox.module.css
@@ -70,10 +70,7 @@
 }
 
 .challengeActive main p {
-  font-size: 2rem;
-  font-weight: 600;
-  padding: 1.5rem 0 1rem;
-  color: var(--title);
+  line-height: 1.5;
 }
 
 .challengeActive footer {
@@ -109,5 +106,5 @@
 }
 
 .challengeActive footer button:hover {
-    filter: brightness(0.8);
+  filter: brightness(0.8);
 }
