--- a/src/styles/pages/Login.module.css
+++ b/src/styles/pages/Login.module.css
@@ -12,17 +12,17 @@
 }
 
 .formLogin {
-  width: 38rem;
-  /* height: 40rem; */
+  width: 50%;
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
   flex-direction: column;
+  margin-right: 10%;
 }
 
 .formLogin > img {
   margin-bottom: 4rem;
-  width: 25vw;
+  width: 70%;
 }
 .formLogin strong {
   color: var(--white);
@@ -56,6 +56,7 @@
 
 .formLogin > form input {
   height: 5rem;
+  width: 70%;
   background: var(--blue);
   filter: brightness(0.75);
   font-size: 1.5rem;
@@ -78,7 +79,6 @@
   color: var(--white);
   padding: 1rem;
   border: 0 transparent;
-
 }
 
 .formLogin > form button:hover {
