fix bug css que movimentava sozinho quando o contador tinha seu tamanho alterado devido a fonte. fix posição da barra de xp que quebrava e ultrapassava a linha ao chegar em 100%

--- a/src/styles/components/ExperienceBar.module.css
+++ b/src/styles/components/ExperienceBar.module.css
@@ -25,5 +25,7 @@
 span.currentExperience {
   position: absolute;
   top: 12px;
+  width: 4rem;
+  margin: 0.5rem;
   transform: translateX(-50%);
 }
