fix bug css que movimentava sozinho quando o contador tinha seu tamanho alterado devido a fonte. fix posição da barra de xp que quebrava e ultrapassava a linha ao chegar em 100% melhoria na responsividade do countdown ao reduzir para telas menores

--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -11,7 +11,13 @@
   flex: 1;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 6.25rem;
+  gap: 4.25rem;
   align-content: center;
   margin-top: 1.75rem;
+}
+
+@media(max-width: 720px) {
+  .container section {
+    gap: 1.0rem;
+  }
 }
