--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -18,6 +18,56 @@
   border-radius: 5px;
   font-size: 8.5rem;
   text-align: center;
+  min-width: 11rem;
+}
+
+@media(max-width: 998px) {
+  .countdownContainer > div {
+    font-size: 8.5rem;
+    min-width: 11rem;
+  }
+  .countdownContainer > span {
+    font-size: 6.25rem;
+  }
+}
+@media(max-width: 720px) {
+  .countdownContainer > div {
+    font-size: 6.5rem;
+    min-width: 2rem;
+  }
+  .countdownContainer > span {
+    font-size: 5.25rem;
+  }
+}
+
+@media(max-width: 600px) {
+  .countdownContainer > div {
+    font-size: 5.5rem;
+    min-width: 1.5rem;
+  }
+  .countdownContainer > span {
+    font-size: 4.75rem;
+  }
+}
+
+@media(max-width: 480px) {
+  .countdownContainer > div {
+    font-size: 4.5rem;
+    min-width: 1rem;
+  }
+  .countdownContainer > span {
+    font-size: 3.25rem;
+  }
+}
+
+@media(max-width: 380px) {
+  .countdownContainer > div {
+    font-size: 3.5rem;
+    min-width: 0rem;
+  }
+  .countdownContainer > span {
+    font-size: 2.25rem;
+  }
 }
 
 .countdownContainer > div span {
